# cream

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  freenet-issues.md
common/: Cargo.toml
common/src/: au_postcodes.rs  chat.rs  currency.rs  directory.rs  frost.rs  identity.rs  inbox.rs  lib.rs  lightning_gateway.rs  location.rs  market.rs  message.rs  order.rs  postcode.rs  postcodes_data.rs  product.rs  storefront.rs  tolls.rs  user_contract.rs  wallet.rs  wallet_backend.rs
contracts/directory-contract/: Cargo.toml
contracts/directory-contract/src/: lib.rs
contracts/inbox-contract/: Cargo.toml
contracts/inbox-contract/src/: lib.rs
contracts/market-directory-contract/: Cargo.toml
contracts/market-directory-contract/src/: lib.rs
contracts/storefront-contract/: Cargo.toml
contracts/storefront-contract/src/: lib.rs
contracts/user-contract/: Cargo.toml
contracts/user-contract/src/: lib.rs
cream-startos/: Dockerfile  LICENSE  Makefile  docker_entrypoint.sh  health_check.sh  instructions.md  manifest.yaml
delegates/cream-delegate/: Cargo.toml
delegates/cream-delegate/src/: lib.rs
docs/: IAQ.md  IDENTITY.md  SOUL.md  TODO.md  faq.md
guardian/: Cargo.toml
guardian/src/: contracts.rs  lightning.rs  main.rs
relay/: package-lock.json  package.json  tsconfig.json
relay/src/: auth.ts  index.ts  session.ts  types.ts
relay/src/__tests__/: relay.test.ts
rendezvous/: package-lock.json  package.json  wrangler.toml
rendezvous/src/: index.test.ts  index.ts
tests/e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/e2e/helpers/: check-invariants.ts  setup-flow.ts  wait-for-app.ts  with-invariants.ts
tests/e2e/tests/: 01-setup-flow.spec.ts  02-directory-view.spec.ts  03-supplier-dashboard.spec.ts  04-add-product.spec.ts  05-view-storefront.spec.ts  06-cross-tab-updates.spec.ts  07-login-persistence.spec.ts  08-place-order.spec.ts  09-wallet-balance.spec.ts  10-returning-user.spec.ts  11-order-decrements-quantity.spec.ts  12-customer-rendezvous.spec.ts  13-schedule-editor.spec.ts  14-cancel-order.spec.ts  15-schedule-reinit.spec.ts  16-fulfill-order.spec.ts  17-wallet-faucet.spec.ts  18-wallet-transfer-ledger.spec.ts  19-wallet-registration-allocation.spec.ts  20-mobile-viewport.spec.ts  21-chat.spec.ts  22-inbox-message.spec.ts  23-admin-grant.spec.ts  24-toll-rates.spec.ts  25-register-market.spec.ts  26-market-order.spec.ts  27-root-wallet.spec.ts
tests/fedimint-integration/: Cargo.toml
tests/fedimint-integration/tests/: ecash_tests.rs
tests/node-integration/: Cargo.toml
tests/node-integration/src/: harness.rs  lib.rs
tests/node-integration/tests/: guardian_stress.rs  harness_tests.rs  multi_node_tests.rs  node_tests.rs  stress_tests.rs  subscription_tests.rs
tools/cream-node/: Cargo.toml
tools/cream-node/migrations/: 001_initial.sql
tools/cream-node/src/: contracts.rs  main.rs  store.rs  subscriptions.rs  ws.rs
ui/: Cargo.toml  Dioxus.toml  input.css  package.json
ui/src/: main.rs
ui/src/components/: accordion_md.rs  app.rs  chat_client.rs  chat_view.rs  directory_view.rs  faq_view.rs  guardian_admin.rs  iaq_view.rs  key_manager.rs  lightning_mock.rs  lightning_remote.rs  market_dashboard.rs  market_view.rs  markets_list_view.rs  messages_view.rs  mod.rs  my_orders.rs  node_api.rs  order_form.rs  profile_view.rs  rendezvous.rs  schedule_editor.rs  shared_state.rs  signing_service.rs  storefront_view.rs  supplier_dashboard.rs  toll_rates.rs  user_state.rs  wallet_fedimint.rs  wallet_native.rs  wallet_router.rs  wallet_view.rs
