[package]
name = "cream-common"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["chrono/std", "chrono/clock"]
dev = ["hkdf", "sha2"]

[dependencies]
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
freenet-stdlib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hkdf = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
