[package]
name = "cream-guardian"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cream-guardian"
path = "src/main.rs"

[dependencies]
cream-common = { path = "../common", features = ["dev", "frost"] }
frost-ed25519 = { version = "2.2", default-features = false, features = ["serde"] }
rand_chacha = "0.3"
rand = "0.8"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "6"
freenet-stdlib = { version = "=0.1.39", features = ["net"] }
tokio-tungstenite = "0.27"
tracing = "0.1"
tracing-subscriber = "0.3"
