[package]
name = "cream-ui"
version = "0.1.0"
edition = "2021"

[features]
default = []
example-data = []
no-sync = []

[dependencies]
cream-common = { path = "../common" }
dioxus = { version = "0.7", features = ["web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
ed25519-dalek = { version = "2", features = ["serde"] }
