[package]
name = "cream-ui"
version = "0.1.0"
edition = "2021"

[features]
default = ["web"]
web = ["dioxus/web", "dioxus/router"]
mobile = ["dioxus/mobile", "dioxus/router"]
use-node = []

[dependencies]
cream-common = { path = "../common", features = ["dev"] }
dioxus = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
ed25519-dalek = { version = "2", features = ["serde"] }
futures = "0.3"
tracing = "0.1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
freenet-stdlib = { version = "0.1", features = ["net"] }
web-sys = { version = "0.3", features = [
    "BinaryType",
    "Blob",
    "Clipboard",
    "console",
    "ErrorEvent",
    "Location",
    "Navigator",
    "Storage",
    "UrlSearchParams",
    "WebSocket",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
serde-wasm-bindgen = "0.5"
getrandom = { version = "0.2", features = ["js"] }
