[package]
name = "cream-fedimint-integration"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "ecash_tests"
path = "tests/ecash_tests.rs"

[dependencies]
anyhow = "1"
fedimint-client = { path = "../../../fedimint/fedimint-client" }
fedimint-client-module = { path = "../../../fedimint/fedimint-client-module" }
fedimint-core = { path = "../../../fedimint/fedimint-core" }
fedimint-mint-client = { path = "../../../fedimint/modules/fedimint-mint-client" }
fedimint-mint-server = { path = "../../../fedimint/modules/fedimint-mint-server" }
fedimint-dummy-client = { path = "../../../fedimint/modules/fedimint-dummy-client" }
fedimint-dummy-server = { path = "../../../fedimint/modules/fedimint-dummy-server" }
fedimint-testing = { path = "../../../fedimint/fedimint-testing" }
fedimint-logging = { path = "../../../fedimint/fedimint-logging" }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
