[package]
name = "cream-node-integration"
version = "0.1.0"
edition = "2021"

[features]
node-tests = []
multi-node-tests = []

[dependencies]
cream-common = { path = "../../common", features = ["dev"] }
freenet-stdlib = { version = "0.1", features = ["net"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
serde_json = "1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
chrono = { version = "0.4", features = ["std", "clock"] }
tracing = "0.1"
tracing-subscriber = "0.3"
