[package]
name = "cream-node"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cream-common = { path = "../../common", features = ["dev"] }
freenet-stdlib = { version = "=0.1.40", features = ["net"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"

# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"

# Serialization
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (for parameter deserialization)
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }

# Time
chrono = { version = "0.4", features = ["std", "clock", "serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
dashmap = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Async utilities
futures = "0.3"
